# conq_python

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
data/json/: memory.json
memory/json/: memory.json
memory/src/: dream.py  memory_utils.py
scripts/: README.md  ViT-test.py  apriltag.py  arm_pose_cmd_test.py  astar_demo.py  client.py  collect_ig.py  collect_images_from_gaze_pose.py  collect_images_of_farm_tools.py  collect_imgs_for_regrasping.py  collect_pcd_for_grasp.py  collect_waypoint_images.py  collect_waypoint_images_and_dream.py  continuous_hose_tracking.py  continuous_regrasping_hose_demo.py  data_recorder_playback_demo.py  data_recorder_playback_demo_rerun.py  data_recorder_playback_map.py  estop_gui.py  generate_conq_hose_manipulation_dataset.py  generate_data_from_vr.py  generate_hose_to_goal_dataset.py  hose_gpe_recorder.py  hose_single_frame_tracker.py  hose_single_frame_tracker_gpe.py  landmark_localization.py  memory_test.py  owlsam.py  pbvs_test.py  perform_grasp.py  prompt_grasp_demo.py  realtime_fast_owlsam.py  realtime_owlvit.py  record_graph.py  regrasping_hose_demo.py  server.py  speech_prompt_walk_to_object.py  test.py  test_gpt.py  test_pictures.py  (+6 more)
scripts/arm_pose/: arm_pose.py  requirements.txt
scripts/print_arm_pose/: README.md  print_arm_pose.py  requirements.txt
src/clickmap_nav/: README.md  bosdyn_vtk_utils.py  click_map_graph_nav_interface.py  click_map_interface.py  clickmap_nav.py  command_line_graph_nav_interface.py  command_line_interface.py  controller.py  graph_nav_interface.py  graph_nav_util.py  requirements.txt  tool_retrieval_demo.md  tool_retrieval_interface.py  view_map_highlighted.py
src/conq/: astar.py  cameras_utils.py  clients.py  conq_astar.py  data_recorder.py  exceptions.py  fan.py  grounding_dino.py  hand_motion.py  manipulation.py  owlsam.py  perception.py  rerun_utils.py  roboflow_utils.py  semantic_grasper.py  utils.py  video_recording.py
src/find_plant_demo/: README.md  arm_grasp_and_pickup.py  find_plant_demo.py  requirements.txt
src/regrasping_demo/: TODO.md  (+10 more)
(+58 files in other folders)
